# cryptopals

./: README.md
c/: .gitignore  CMakeLists.txt  README.md  chall_validation.sh  main.c
c/challenge-app-template/: .gitignore
c/challenge-app-template/c/: README.md  main.c
c/challenge-app-template/c/src/: CMakeLists.txt
c/challenge-app-template/c/tests/: CMakeLists.txt
c/include/set1/: base64.h  fixed_xor.h  single_byte_xor_cipher.h  utils.h
c/set-1/chall1/: CMakeLists.txt  README.md  main.c  unit_tests.sh
c/set-1/chall1/include/: base64.h
c/set-1/chall1/src/: base64.c
c/set-1/chall1/tests/: base64_test.c
c/src/: CMakeLists.txt
c/src/set1/: base64.c  fixed_xor.c  single_byte_xor_cipher.c  utils.c
c/tests/: CMakeLists.txt  cmocka_api.h  set1_test.c  smoke_test.c
c/tests/set1/: base64_test.c
